- Fix tags wrap - Embed code send link too

--- a/src/co/raindrops/single/tags/index.module.css
+++ b/src/co/raindrops/single/tags/index.module.css
@@ -1,4 +1,6 @@
 .tags {
     grid-area: tags;
     font-size: var(--font-size-small);
+    display: flex;
+    flex-wrap: wrap;
 }
